--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,87 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+html {
+  font-family: arial;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+p {
+  color: black;
+}
+
+.bold { 
+  font-weight: bold;
+}
+
+.blueBackground {
+  background-color: #375c7b;
+  height: 300px;
+  width: 100%;
+  z-index: -1;
+}
+
+.main {
+  position: fixed;
+  top: 75px;
+  width: 100%;
+}
+
+.logo {
+  margin: 20px;
+}
+
+.container {
+  max-width: 900px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 3fr 4fr;
+}
+
+h2 {
+  padding: 0;
+  margin: 0;
+  line-height: 1.25em;
+}
+
+.mainContent {
+  background-color: white;
+  color: #06365f;
+  border-radius: 5px;
+  padding: 25px;
+  box-shadow: 0 0 5px 5px rgba(0,0,0, 0.1);
+}
+
+.app {
+  padding: 10px;
+}
+
+.footer {
+  margin-top: 75px;
+  bottom: 0%;
+  text-align: center;
+}
+
+li {
+  display: inline;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin: 0 8px;
+}
+
+a {
+  text-decoration: none;
+  color: #06365f;
+  font-size: 12px;
+}
+
+.copyright {
+  color: grey;
+  font-size: 12px;
+
+}
+
